@@ -1,0 +1,143 @@
+{
+  "name": "IT",
+  
+  "chat.modes.Local": "Locale",
+  "chat.modes.Broadcast": "Broadcast",
+  "chat.modes.Party": "Squadra",
+  "chat.modes.Whisper": "Sussurra",
+  "chat.modes.RadioMessage": "Messaggi Radio",
+  "chat.modes.CommandResult": "Comandi",
+
+  "chat.textbox.hint": "Scrivi qui",
+
+  "chat.buttons.bottom": "Scorri giù",
+  "chat.buttons.settings": "Impostazioni",
+  "chat.buttons.hide": "Nascondi chat",
+  "chat.buttons.bigger_chat": "Estendi chat",
+  "chat.buttons.move_chat": "Sposta chat",
+
+  "chat.alerts.dm_not_specified": "Seleziona il ricevente",
+  "chat.alerts.dm_not_found": "Il giocatore deve essere nello stesso pianeta",
+  "chat.alerts.copied_to_clipboard": "Copiato negli appunti",
+  "chat.alerts.cannot_start_two_slashes": "Il comando non può iniziare con due slash",
+  "chat.alerts.cannot_ping_server": "Non puoi pingare messaggi del server",
+  "chat.alerts.cannot_ping_command": "Non puoi pingare comandi",
+  "chat.alerts.cannot_ping_time": "Aspetta %d secondi per pingare",
+  "chat.alerts.cannot_ping_yourself": "Perché pingare se stessi?",
+  "chat.alerts.cannot_dm_server": "Non puoi mandare DM al server",
+  "chat.alerts.cannot_dm_command_result": "Non puoi mandare DM nella sezione comandi",
+  "chat.alerts.pinged": "Pingato %s",
+  "chat.alerts.ping_failed": "Impossibile pingare %s",
+  "chat.alerts.was_pinged": "Sei stato pingato da %s",
+
+  "greeting.se_osb_xsb_not_found": "Benvenuto nell'Advanced Chat di Degranon!\n\nE' richiesta la versione 1.9.24+ di StarExtensions, OpenStarbound 0.1.8+ o xStarbound v3.4.5.1+\nhttps://github.com/StarExtensions/StarExtensions\nhttps://github.com/OpenStarbound/OpenStarbound\nhttps://github.com/xStarbound/xStarbound",
+  "greeting.se_version": "Benvenuto nell'Advanced Chat di Degranon!\n\nAggiorna StarExtensions alla versione 1.9.24+",
+  "greeting.osb_xsb_version": "Benvenuto nell'Advanced Chat di Degranon!\n\nAggiorna OpenStarbound alla versione 0.1.8+ o xStarbound a v3.4.5.1+\nhttps://github.com/OpenStarbound/OpenStarbound\nhttps://github.com/xStarbound/xStarbound",
+  "greeting.unbind_controls": "Benvenuto nell'Advanced Chat di Degranon!\n\nPer iniziare, per iniziare, dovrai prima impostare i seguenti comandi (Premi Escape - Options - Controls - Game):\n\n* Begin Chat Command\n* Begin Chat\n* Repeat Last Command ^gray;(usando /binds - Repeat last command)^reset;\n\nClicca Accept, riavvia il gioco - e dovresti essere pronto!",
+  "greeting.unknown": "Benvenuto nell'Advanced Chat di Degranon!\n\nQualcosa è andato storto. Oops!",
+  "greeting.close": "Capito!",
+
+  "settings.title": "Impostazioni chat",
+  "settings.subtitle": "Custom chat di Degranon",
+  "settings.ok": "Ok",
+  "settings.cancel": "Annulla",
+  "settings.change_language": "Cambia lingua",
+  "settings.close": "Chiudi",
+  "settings.back": "Indietro",
+  "settings.add": "Aggiugni",
+  "settings.remove": "Rimuovi",
+
+
+
+
+  "commands.general.admin": "Abilita o disabilita la modalità admin, che sblocca tutti i crafting, nega danni e consumo di energia, e permette l'accesso ai comandi admin.",
+  "commands.general.help": "Usa /help commandName per avere informazioni dettagliate.",
+  "commands.general.naked": "Rimuovi equipaggiamento. Utile nelle macro per rimpiazzare il vecchio equipaggiamento, o solo per divertimento.",
+  "commands.general.nick": "Cambia soprannome.",
+  "commands.general.played": "Mostra il numero di ore di gioco totali.",
+  "commands.general.pvp": "Abilita o disabilita il PvP.",
+  "commands.general.reload": "Riavvia gli assets locali. Potrebbe laggare durante il processo.",
+  "commands.general.serverwhoami": "Mostra il tuo username nel server e lo stato di admin.",
+  "commands.general.suicide": "Uccidi il personaggio, subendo le normali penalità (permadeath inclusa!). Da usare come ultima risorsa.",
+  "commands.general.whereami": "Mostra le attuali coordinate del giocatore.",
+  "commands.general.who": "Mostra tutti i giocatori attualmente online.",
+  "commands.general.whoami": "Mostra il nome del giocatore.",
+  "commands.general.w": "Manda un messaggio privato ad un altro giocatore.",
+
+  "commands.admin.ban": "Banna un giocatore dal server.",
+  "commands.admin.clearstagehand": "Pulisci tutti gli stagehands.",
+  "commands.admin.disablespawning": "Disabilita lo spawn di mostri.",
+  "commands.admin.enablespawning": "Abilita lo spawn di mostri.",
+  "commands.admin.kick": "Espelli un giocatore dal server.",
+  "commands.admin.list": "Mostra tutti i giocatori attualmente online.",
+  "commands.admin.placedungeon": "Genera un dungeon alle coordinate specificate.",
+  "commands.admin.resetuniverseflags": "Resetta tutte le universe flags.",
+  "commands.admin.serverreload": "Riavvia il server.",
+  "commands.admin.setspawnpoint": "Imposta lo spawn point.",
+  "commands.admin.settileprotection": "Imposta protezione dei blocchi.",
+  "commands.admin.setuniverseflag": "Imposta una universe flag.",
+  "commands.admin.spawnitem": "Genera un oggetto.",
+  "commands.admin.spawnliquid": "Genera un liquido.",
+  "commands.admin.spawnmonster": "Genera un mostro.",
+  "commands.admin.spawnnpc": "Genera un NPC.",
+  "commands.admin.spawnstagehand": "Genera uno stagehand.",
+  "commands.admin.spawntreasure": "Genera un tesoro.",
+  "commands.admin.spawnvehicle": "Genera un veicolo.",
+  "commands.admin.timewarp": "Salta del tempo.",
+  "commands.admin.unbanip": "Rimuovi ban un indirizzo IP.",
+  "commands.admin.unbanuuid": "Rimuovi ban da un UUID.",
+  "commands.admin.warp": "Teletrasportati in una posizione specifica.",
+  "commands.admin.whereis": "Mostra le attuali coordinate di un giocatore.",
+
+  "commands.debug.boxes": "Gestisci i riquadri di debug.",
+  "commands.debug.cinema": "Gestisci modalità cinema.",
+  "commands.debug.clearboxes": "Pulisci tutti i riquadri di debug.",
+  "commands.debug.clearcinematics": "Pulisci tutti i filmati.",
+  "commands.debug.clearradiomessages": "Pulisci tutti i messaggi radio.",
+  "commands.debug.clearscannedobjects": "Pulisci la lista di oggetti scannerizzati.",
+  "commands.debug.completequest": "Completa una missione.",
+  "commands.debug.debug": "Gestisci modalità debug.",
+  "commands.debug.enabletech": "Attiva una tech.",
+  "commands.debug.entityeval": "Identifica un'entità.",
+  "commands.debug.eval": "Identifica uno script.",
+  "commands.debug.failquest": "Fallisci una missione.",
+  "commands.debug.fixedcamera": "Gestisci modalità camera fissa.",
+  "commands.debug.fullbright": "Gestisci massima luminosità.",
+  "commands.debug.giveessentialitem": "Ottieni oggetto essenziale.",
+  "commands.debug.gravity": "Informazioni gravità",
+  "commands.debug.maketechavailable": "Sblocca una tech.",
+  "commands.debug.previewnewquest": "Mostra anteprima di una missione.",
+  "commands.debug.previewquestcomplete": "Mostra anteprima di missione completata.",
+  "commands.debug.previewquestfailed": "Mostra anteprima di missione fallita.",
+  "commands.debug.radiomessage": "Invia messaggio radio.",
+  "commands.debug.resetachievements": "Resetta i traguardi di gioco.",
+  "commands.debug.resetgravity": "Resetta la gravità.",
+  "commands.debug.setgravity": "Imposta la gravità",
+  "commands.debug.startquest": "Inizia una missione.",
+  "commands.debug.statistic": "Mostra statistiche.",
+  "commands.debug.togglelayer": "Gestisci un layer.",
+  "commands.debug.upgradeship": "Potenzia l'astronave.",
+
+  "commands.starextentions.binds": "Mostra tutti i comandi di gioco.",
+  "commands.starextentions.breathing": "Gestisci animazione di respiro.",
+  "commands.starextentions.guide": "Mostra la guida.",
+  "commands.starextentions.voice": "Gestisci chat vocale.",
+  "commands.starextentions.swap": "Cambia il personaggio attuale.",
+  "commands.starextentions.editor": "Apri l'editor.",
+  "commands.starextentions.identity": "Modifica le impostazioni di identità del personaggio..",
+  "commands.starextentions.identity.set": "Imposta attributi identità del personaggio.",
+  "commands.starextentions.identity.get": "Ricevi attributi identità del personaggio.",
+  "commands.starextentions.speech": "Gestisci vignette.",
+  "commands.starextentions.nightvision": "Gestisci visione notturna.",
+  "commands.starextentions.render": "Renderizza parti del personaggio e salva negli Appunti.",
+
+  "commands.openstarbound.swap": "Cambia il personaggio attuale.",
+  "commands.openstarbound.identity": "Modifica le impostazioni di identità del personaggio.",
+  "commands.openstarbound.identity.set": "Imposta attributi identità del personaggio.",
+  "commands.openstarbound.identity.get": "Ricevi attributi identità del personaggio.",
+  "commands.openstarbound.render": "Renderizza parti del personaggio e salva negli Appunti.",
+
+  "commands.starcustomchat.clearchat": "Cancella la cronologia della chat.",
+
+  "commands.custom.hotreload": "Riavvia la configurazione."
+}
