@@ -22,5 +22,9 @@
   {
     "name": "Nederlands",
     "code": "da"
+  },
+  {
+    "name": "Italiano",
+    "code": "it"
   }
 ]
