@@ -1,0 +1,13 @@
+{
+    "settings.plugins.charactervoice": "Voce Personaggio",
+    "settings.plugins.charactervoice.enable": "Abilita",
+    "settings.plugins.charactervoice.enablewhisper": "Abilita in DM",
+    "settings.plugins.charactervoice.pitch": "Pitch",
+    "settings.plugins.charactervoice.test": "Test",
+    "settings.plugins.charactervoice.description": "Riproduci suono quando invii un messaggio",
+    "settings.plugins.charactervoice.wisperDescription": "Riproduci suono quando sussurri ad un giocatore",
+    "settings.plugins.charactervoice.customItem": "^green;Custom",
+    "settings.plugins.charactervoice.customSoundHint": "/inter/path/to/your_sound.ogg",
+    "settings.plugins.charactervoice.save": "Salva",
+    "settings.plugins.charactervoice.soundNotFound": "^red;Suono non trovato"
+}
