@@ -1,0 +1,41 @@
+{
+    "chat.commands.copy": "Copia messaggio",
+    "chat.commands.ping": "Pinga utente",
+    "chat.commands.delete": "Cancella",
+    "chat.commands.confirm_delete": "Conferma cancellazione",
+    "chat.commands.cancel_delete": "Annulla cancellazione",
+    "chat.dming.hint": "Invia DM a:",
+    "chat.commands.dm": "Utente DM",
+    "chat.commands.collapse": "Chiudi messaggio",
+    "chat.commands.uncollapse": "Espandi messaggio",
+    "settings.plugins.mainchat": "Generale",
+    "settings.chat_mode": "Modalità chat",
+    "settings.font_size": "Dimensioni font",
+    "settings.clear_chat_history": "Svuota chat",
+    "settings.reset_avatar": "Resetta l'offset",
+    "settings.chat_collapse": "Massimo di caratteri\n0 = non chiudere",
+    "settings.modes.compact": "Compatto",
+    "settings.modes.modern": "Modern",
+    "settings.mainchat.customavatar": "Icona personalizzata (fino a 64x64)",
+    "settings.mainchat.setportrait": "Imposta",
+    "settings.mainchat.alerts.size_error": "Dimensioni massime immagine 64x64",
+    "settings.mainchat.alerts.image_error": "Impossibile caricare immagine",
+    "settings.mainchat.chatmode": "Modalità chat:",
+    "settings.mainchat.set_custom_directives": "Imposta direttive per l'icona personalizzata",
+    "settings.mainchat.utc_offset": "UTC offset: ",
+    "settings.mainchat.select_portrait": "Seleziona icona",
+    "settings.mainchat.select_frame": "Seleziona cornice",
+    "settings.mainchat.portraits.remove": "Rimuovi icona",
+    "settings.mainchat.portraits.customFrame": "Imposta cornice personalizzata",
+    "settings.mainchat.portraits.customFrameDescription": "Cornice personalizzata (fino a 64x64)",
+    "settings.mainchat.alerts.frame_cleared": "Cornice rimossa",
+    "settings.mainchat.portraits.default": "Giocatore",
+    "settings.mainchat.dialogs.remove.portraits.title": "Rimuovi icona",
+    "settings.mainchat.dialogs.remove.frames.title": "Rimuovi cornice",
+    "settings.mainchat.dialogs.remove.subtitle": "^red;Quest'azione non è reversibile",
+    "settings.mainchat.dialogs.remove.portraits.message": "Sei sicuro di voler cancellare quest'icona?",
+    "settings.mainchat.dialogs.remove.frames.message": "Sei sicuro di voler cancellare questa cornice?",
+    "settings.mainchat.dialogs.remove.ok": "Cancella",
+    "settings.mainchat.dialogs.remove.cancel": "Annulla",
+    "settings.mainchat.portraitpreview": "Anteprima icona"
+}
