@@ -1,0 +1,6 @@
+{
+    "settings.plugins.modesounds": "Suono messaggi",
+    "settings.plugins.modesounds.mode_list": "Lista modalità",
+    "settings.plugins.modesounds.sound_list": "Lista suoni",
+    "settings.plugins.modesounds.clear": "Rimuovi suoni"
+}
