@@ -1,0 +1,4 @@
+{
+    "chat.commands.add_reaction": "Aggiungi reazione",
+    "reactions.reactselect.hint": "Cerca..."
+}
