@@ -1,0 +1,4 @@
+{
+    "chat.commands.reply": "Rispondi",
+    "chat.reply.recipient": "Rispondi a %s:"
+}
